fix: title capitalization

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -664,7 +664,7 @@
             "id": "gc-nodejs-typescript-food-catalog",
             "shortId": "gc-food-catalog",
             "onboardDate": "2023-11-15",
-            "title": "Ingest custom API data into Microsoft 365 with a Microsoft Graph connector",
+            "title": "Ingest Custom API Data into Microsoft 365 with a Microsoft Graph Connector",
             "shortDescription": "This sample project uses Teams Toolkit for Visual Studio Code to simplify the process of creating a Microsoft Graph connector that ingests data from a custom API to Microsoft Graph.",
             "fullDescription": "This sample project uses Teams Toolkit for Visual Studio Code to simplify the process of creating a Microsoft Graph connector that ingests data from a custom API to Microsoft Graph. It provides an end to end example of creating the connector, ingesting content and refreshing the ingested content on a schedule. It also includes the simplified admin experience which means that admins can toggle the connector on and off from the Microsoft Teams admin center.",
             "types": [
