--- a/live-share-dice-roller/.vscode/launch.json
+++ b/live-share-dice-roller/.vscode/launch.json
@@ -52,7 +52,7 @@
     ],
     "compounds": [
         {
-            "name": "Debug (Edge)",
+            "name": "Debug in Teams (Edge)",
             "configurations": [
                 "Attach to Frontend (Edge)"
             ],
@@ -64,7 +64,7 @@
             "stopAll": true
         },
         {
-            "name": "Debug (Chrome)",
+            "name": "Debug in Teams (Chrome)",
             "configurations": [
                 "Attach to Frontend (Chrome)"
             ],
