refactor: react-detail follow upgrade doc
refactor: readme and version

refactor: manifest version

--- a/react-retail-dashboard/.vscode/settings.json
+++ b/react-retail-dashboard/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "debug.onTaskErrors": "abort"
+    "debug.onTaskErrors": "abort",
+    "files.exclude": {
+        "**/jest-output": true
+    }
 }
