--- a/spfx-productivity-dashboard/package.json
+++ b/spfx-productivity-dashboard/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "description": "",
     "engines": {
-        "node": ">=16.13.0 <17.0.0 || >=18.17.1 <19.0.0"
+        "node": "16 || 18"
     },
     "author": "",
     "scripts": {
