set container image name in yaml

--- a/bot-sso-docker/env/.env.dev
+++ b/bot-sso-docker/env/.env.dev
@@ -23,4 +23,4 @@ BOT_DOMAIN=
 AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 
 # User defined environment variables
-CONTAINER_IMAGE=sso-bot:latest
+CONTAINER_IMAGE=
