refactor: use secret ref

--- a/bot-sso-docker/teamsapp.yml
+++ b/bot-sso-docker/teamsapp.yml
@@ -85,12 +85,13 @@ deploy:
   - uses: script
     name: set environment variables
     with:
-      run: echo "::set-teamsfx-env CONTAINER_IMAGE=sso-bot:latest"
+      run: echo "::set-teamsfx-env CONTAINER_IMAGE=sso-bot"
 
   - uses: script
     name: set environment variables
     with:
-      run: echo "::set-teamsfx-env AZURE_CONTAINER_IMAGE=${{AZURE_CONTAINER_APP_NAME}}.azurecr.io/${{CONTAINER_IMAGE}}"
+      run: echo "::set-teamsfx-env
+        AZURE_CONTAINER_IMAGE=${{AZURE_CONTAINER_APP_NAME}}.azurecr.io/${{CONTAINER_IMAGE}}"
 
   - uses: script
     name: build container image
@@ -115,14 +116,13 @@ deploy:
   - uses: script
     name: deploy container image
     with:
-      run: az containerapp up -n ${{AZURE_CONTAINER_APP_NAME}} --image ${{AZURE_CONTAINER_IMAGE}}
-        --env-vars "BOT_ID=${{BOT_ID}}"
-        "BOT_PASSWORD=secretref:bot-password"
-        "BOT_DOMAIN=${{BOT_DOMAIN}}"
-        "AAD_APP_CLIENT_ID=${{AAD_APP_CLIENT_ID}}"
+      run: az containerapp up -n ${{AZURE_CONTAINER_APP_NAME}} --image
+        ${{AZURE_CONTAINER_IMAGE}} --env-vars "BOT_ID=secretref:bot-id"
+        "BOT_PASSWORD=secretref:bot-password" "BOT_DOMAIN=${{BOT_DOMAIN}}"
+        "AAD_APP_CLIENT_ID=secretref:aad-app-client-id"
         "AAD_APP_CLIENT_SECRET=secretref:aad-app-client-secret"
-        "AAD_APP_TENANT_ID=${{AAD_APP_TENANT_ID}}"
-        "AAD_APP_OAUTH_AUTHORITY_HOST=${{AAD_APP_OAUTH_AUTHORITY_HOST}}"
+        "AAD_APP_TENANT_ID=secretref:aad-app-tenant-id"
+        "AAD_APP_OAUTH_AUTHORITY_HOST=secretref:aad-app-oauth-authority-host"
 
 publish:
   # Validate using manifest schema
@@ -158,3 +158,4 @@ publish:
     # the specified environment variable(s).
     writeToEnvironmentFile:
       publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
+projectId: ad893c05-7ed0-4e67-b794-cb52a99b900b
