--- a/intelligent-data-chart-generator/appPackage/manifest.json
+++ b/intelligent-data-chart-generator/appPackage/manifest.json
@@ -7,8 +7,8 @@
   "developer": {
     "name": "Teams App, Inc.",
     "websiteUrl": "${{TAB_ENDPOINT}}",
-    "privacyUrl": "${{TAB_ENDPOINT}}/index.html#/privacy",
-    "termsOfUseUrl": "${{TAB_ENDPOINT}}/index.html#/termsofuse"
+    "privacyUrl": "https://www.example.com/privacy",
+    "termsOfUseUrl": "https://www.example.com/termofuse"
   },
   "icons": {
     "color": "color.png",
