refactor: replace oai with openAI

--- a/intelligent-data-chart-generator/teamsapp.local.yml
+++ b/intelligent-data-chart-generator/teamsapp.local.yml
@@ -116,10 +116,10 @@ deploy:
         M365_CLIENT_SECRET: ${{SECRET_AAD_APP_CLIENT_SECRET}}
         M365_TENANT_ID: ${{AAD_APP_TENANT_ID}}
         M365_AUTHORITY_HOST: ${{AAD_APP_OAUTH_AUTHORITY_HOST}}
-        OAI_ENDPOINT: ${{SECRET_OAI_ENDPOINT}}
-        OAI_DEPLOYMENT_NAME: ${{SECRET_OAI_DEPLOYMENT_NAME}}
-        OAI_API_KEY: ${{SECRET_OAI_API_KEY}}
-        OAI_CHAT_COMPLETION_URL: ${{OAI_CHAT_COMPLETION_URL}}
+        OPENAI_ENDPOINT: ${{SECRET_OPENAI_ENDPOINT}}
+        OPENAI_DEPLOYMENT_NAME: ${{SECRET_OPENAI_DEPLOYMENT_NAME}}
+        OPENAI_API_KEY: ${{SECRET_OPENAI_API_KEY}}
+        OPENAI_CHAT_COMPLETION_URL: ${{OPENAI_CHAT_COMPLETION_URL}}
         SQL_USER: ${{SQL_USER}}
         SQL_PASSWORD: ${{SECRET_SQL_PASSWORD}}
         SQL_SERVER: ${{SQL_SERVER}}
