--- a/intelligent-data-chart-generator/appPackage/manifest.json
+++ b/intelligent-data-chart-generator/appPackage/manifest.json
@@ -6,7 +6,7 @@
   "packageName": "com.microsoft.teams.extension",
   "developer": {
     "name": "Teams App, Inc.",
-    "websiteUrl": "${{TAB_ENDPOINT}}",
+    "websiteUrl": "https://www.example.com",
     "privacyUrl": "https://www.example.com/privacy",
     "termsOfUseUrl": "https://www.example.com/termofuse"
   },
