--- a/bot-sso-docker/aad.manifest.json
+++ b/bot-sso-docker/aad.manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "${{AAD_APP_OBJECT_ID}}",
     "appId": "${{AAD_APP_CLIENT_ID}}",
-    "name": "sso-bot-aad",
+    "name": "SSO Bot AAD",
     "accessTokenAcceptedVersion": 2,
     "signInAudience": "AzureADMyOrg",
     "optionalClaims": {
