--- a/bot-sso-docker/package.json
+++ b/bot-sso-docker/package.json
@@ -10,7 +10,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
-    "dev": "nodemon --exec node --inspect=0.0.0.0:9239 --signal SIGINT -r ts-node/register ./index.ts",
+    "dev": "nodemon --exec node --inspect=0.0.0.0:9239 --signal SIGINT -r ts-node/register ./src/index.ts",
     "build": "tsc --build && shx cp -r ./public ./lib",
     "start": "node ./lib/index.js",
     "watch": "nodemon --exec \"npm run start\"",
