fix: production image does not have package.json

--- a/bot-sso-docker/Dockerfile
+++ b/bot-sso-docker/Dockerfile
@@ -19,4 +19,4 @@ FROM base as production
 ENV NODE_ENV=production
 COPY --from=build /usr/src/app/lib ./lib
 COPY --from=build /usr/src/node_modules ./node_modules
-CMD ["npm", "start"]
+CMD ["node", "lib/src/index.js"]
