ci: update code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,6 +13,7 @@
 /NPM-search-message-extension-codespaces @kimizhu @dooriya @qinezh
 /adaptive-card-notification @kimizhu @dooriya @swatDong @XiaofuHuang
 /bot-sso @eriolchan @yukun-dong
+/bot-sso-docker @eriolchan @hund030 @Yimin-Jin
 /command-bot-with-sso @adashen @SLdragon
 /graph-connector-app @adashen @formulahendry
 /graph-connector-bot @adashen @formulahendry
