--- a/bot-sso-docker/teamsapp.yml
+++ b/bot-sso-docker/teamsapp.yml
@@ -91,7 +91,7 @@ deploy:
     name: set environment variables
     with:
       run: echo "::set-teamsfx-env
-        AZURE_CONTAINER_IMAGE=${{AZURE_CONTAINER_APP_NAME}}.azurecr.io/${{CONTAINER_IMAGE}}"
+        AZURE_CONTAINER_IMAGE=${{AZURE_CONTAINER_REGISTRY_SERVER}}/${{CONTAINER_IMAGE}}"
 
   - uses: script
     name: build container image
@@ -106,7 +106,7 @@ deploy:
   - uses: script
     name: login azure container registry
     with:
-      run: az acr login -n ${{AZURE_CONTAINER_APP_NAME}}
+      run: az acr login -n ${{AZURE_CONTAINER_REGISTRY_NAME}}
 
   - uses: script
     name: push container image
