fix: local debug error

--- a/team-central-dashboard/.vscode/launch.json
+++ b/team-central-dashboard/.vscode/launch.json
@@ -28,6 +28,9 @@
             "type": "msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -39,6 +42,9 @@
             "type": "chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -76,7 +82,7 @@
             "name": "Debug in Teams (Chrome)",
             "configurations": [
                 "Attach to Frontend (Chrome)",
-                 "Attach to Backend"
+                "Attach to Backend"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
