--- a/hello-world-tab-docker/Dockerfile
+++ b/hello-world-tab-docker/Dockerfile
@@ -10,5 +10,5 @@ CMD ["npm", "start"]
 FROM development AS build
 RUN npm run build
 
-FROM nginx:1.21.3-alpine
+FROM nginx:1.21.3-alpine AS production
 COPY --from=build /app/build /usr/share/nginx/html
