--- a/hello-world-tab-docker/teamsapp.local.yml
+++ b/hello-world-tab-docker/teamsapp.local.yml
@@ -78,6 +78,7 @@ provision:
     with:
       target: ./.localConfigs
       envs:
+        HTTPS: true
         PORT: 53000
         REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
         REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
