--- a/hello-world-tab-docker/teamsapp.yml
+++ b/hello-world-tab-docker/teamsapp.yml
@@ -41,12 +41,6 @@ provision:
           deploymentName: Create-resources-for-tab # Required when deploy ARM template
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
 
-  - uses: azureStorage/enableStaticWebsite
-    with:
-      storageResourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
-      indexPage: index.html
-      errorPage: error.html
-
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
       manifestPath: aad.manifest.json # Relative path to teamsfx folder. Environment variables in manifest will be replaced before apply to AAD app
@@ -72,60 +66,70 @@ provision:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for built zip file.
 
 deploy:
-  # Run npm command
-  - uses: cli/runNpmCommand
+  # Generate runtime environment variables for tab
+  - uses: file/createOrUpdateEnvironmentFile
     with:
-      args: install
-  # Run npm command
-  - uses: cli/runNpmCommand
-    env:
-      REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
-      REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
-      REACT_APP_FUNC_NAME: getUserProfile
-      REACT_APP_FUNC_ENDPOINT: ${{API_FUNCTION_ENDPOINT}}
+      target: ./.env.production
+      envs:
+        REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
+        REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
+        REACT_APP_FUNC_NAME: getUserProfile
+        REACT_APP_FUNC_ENDPOINT: ${{API_FUNCTION_ENDPOINT}}
+
+  - uses: script
+    name: set environment variables
     with:
-      args: run build --if-present
-  # Deploy bits to Azure Storage Static Website
-  - uses: azureStorage/deploy
+      run: echo "::set-teamsfx-env
+        TAB_CONTAINER_IMAGE=${{REGISTRY_NAME}}.azurecr.io/hello_world_tab"
+
+  - uses: script
+    name: set environment variables
     with:
-      # Deploy base folder. This folder includes manifest files for AAD app and Teams app that should be ignored using the ignoreFile.
-      artifactFolder: build
-      # The resource id of the cloud resource to be deployed to
-      resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
-  # Run npm command
-  - uses: cli/runNpmCommand
+      run: echo "::set-teamsfx-env
+        API_CONTAINER_IMAGE=${{REGISTRY_NAME}}.azurecr.io/hello_world_api"
+
+  - uses: script
+    name: build container image
     with:
-      workingDirectory: api
-      args: install
-  # Run npm command
-  - uses: cli/runNpmCommand
+      run: docker build -t ${{TAB_CONTAINER_IMAGE}} .
+
+  - uses: script
+    name: build container image
     with:
-      workingDirectory: api
-      args: run build --if-present
-  # Install development tool(s)
-  - uses: devTool/install
+      run: docker build -t ${{API_CONTAINER_IMAGE}} ./api
+
+  - uses: script
+    name: login azure container registry
     with:
-      dotnet: true
-    # Write the information of installed development tool(s) into environment
-    # file for the specified environment variable(s).
-    writeToEnvironmentFile:
-      dotnetPath: DOTNET_PATH
-  - uses: cli/runDotnetCommand
+      run: az acr login -n ${{REGISTRY_NAME}}
+
+  - uses: script
+    name: push container image
     with:
-      workingDirectory: api
-      args: build extensions.csproj -o bin --ignore-failed-sources
-      execPath: ${{DOTNET_PATH}}
-  # Deploy your application to Azure Functions using the zip deploy feature.
-  # For additional details, see at https://aka.ms/zip-deploy-to-azure-functions
-  - uses: azureFunctions/zipDeploy
+      run: docker push ${{TAB_CONTAINER_IMAGE}}
+
+  - uses: script
+    name: push container image
     with:
-      workingDirectory: api
-      # deploy base folder
-      artifactFolder: .
-      # Ignore file location, leave blank will ignore nothing
-      ignoreFile: .funcignore
-      # the resource id of the cloud resource to be deployed to
-      resourceId: ${{API_FUNCTION_RESOURCE_ID}}
+      run: docker push ${{API_CONTAINER_IMAGE}}
+
+  - uses: script
+    name: deploy container image
+    with:
+      run: az containerapp up -n ${{FRONTEND_APP_NAME}} --image ${{TAB_CONTAINER_IMAGE}}
+      
+  - uses: script
+    name: deploy container image
+    with:
+      run: az containerapp up -n ${{BACKEND_APP_NAME}} --image ${{API_CONTAINER_IMAGE}} --env-vars "M365_CLIENT_ID=secretref:m365-client-id"
+        "M365_CLIENT_SECRET=secretref:m365-client-secret"
+        "M365_TENANT_ID=secretref:m365-tenant-id"
+        "M365_AUTHORITY_HOST=secretref:m365-oauth-authority-host"
+        "WEBSITE_AUTH_AAD_ACL=secretref:website-auth-aad-acl"
+        "ALLOWED_APP_IDS=secretref:allowed-app-ids"
+        "CORS_ALLOWED_ORIGINS=[\"${{TAB_ENDPOINT}}\"]"
+        "CORS_SUPPORT_CREDENTIALS=true"
+        "CONTAINER_NAME=api"
 
 publish:
   # Validate using manifest schema
@@ -156,3 +160,4 @@ publish:
     # the specified environment variable(s).
     writeToEnvironmentFile:
       publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
+projectId: ec44a81a-8784-49bc-95b5-bcbd2e1cd2e5
