--- a/hello-world-tab-docker/env/.env.dev
+++ b/hello-world-tab-docker/env/.env.dev
@@ -18,8 +18,11 @@ AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY_HOST=
 AAD_APP_OAUTH_AUTHORITY=
-TAB_AZURE_STORAGE_RESOURCE_ID=
 TAB_ENDPOINT=
 TAB_DOMAIN=
 API_FUNCTION_ENDPOINT=
-API_FUNCTION_RESOURCE_ID=
+BACKEND_APP_NAME=
+FRONTEND_APP_NAME=
+REGISTRY_NAME=
+TAB_CONTAINER_IMAGE=
+API_CONTAINER_IMAGE=
