--- a/intelligent-data-chart-generator/api/package.json
+++ b/intelligent-data-chart-generator/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
-    "dev": "func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
+    "dev": "nodemon --exec func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
     "build": "tsc",
     "watch:teamsfx": "tsc -w",
     "prestart": "npm run build",
@@ -11,12 +11,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@azure/functions": "^3.5.1",
+    "@azure/functions": "^4.2.0",
     "@microsoft/teamsfx": "^2.3.0",
     "mssql": "^10.0.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "nodemon": "^3.1.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "main": "dist/src/functions/*.js"
 }
