refactor: refine deploy script

--- a/hello-world-tab-docker/env/.env.dev
+++ b/hello-world-tab-docker/env/.env.dev
@@ -23,6 +23,7 @@ TAB_DOMAIN=
 API_FUNCTION_ENDPOINT=
 BACKEND_APP_NAME=
 FRONTEND_APP_NAME=
-REGISTRY_NAME=
+AZURE_CONTAINER_REGISTRY_NAME=
+AZURE_CONTAINER_REGISTRY_SERVER=
 TAB_CONTAINER_IMAGE=
 API_CONTAINER_IMAGE=
