--- a/hello-world-tab-docker/docker-compose.yml
+++ b/hello-world-tab-docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - SSL_CRT_FILE=/app/.fx/certificate/localhost.crt
       - SSL_KEY_FILE=/app/.fx/certificate/localhost.key
       - REACT_APP_FUNC_ENDPOINT=http://localhost:7071
-      - WATCHPACK_POLLING=true
+      - WATCHPACK_POLLING=true # Enable hot reload
   api:
     build:
       context: ./api
@@ -26,12 +26,11 @@ services:
     volumes:
       - ./api:/home/site/wwwroot
       - /home/site/wwwroot/node_modules
-      - /home/site/wwwroot/bin
       - /home/site/wwwroot/dist
     env_file:
       - api/.localConfigs
     environment:
       - CORS_ALLOWED_ORIGINS=["https://localhost:53000"]
       - CORS_SUPPORT_CREDENTIALS=true
-      - CONTAINER_NAME=api # Enable CORS
+      - CONTAINER_NAME=api # Enable CORS middleware
       # - FUNCTIONS_ENABLE_CORS_CONFIGURATION=true # Enable CORS, requires azure-functions-host 4.31.0 or later
