--- a/developer-assist-dashboard/.vscode/launch.json
+++ b/developer-assist-dashboard/.vscode/launch.json
@@ -72,6 +72,9 @@
             "type": "msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -83,6 +86,9 @@
             "type": "chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -94,6 +100,9 @@
             "type": "msedge",
             "request": "launch",
             "url": "https://outlook.office.com/host/${{local:M365_APP_ID}}?${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -105,6 +114,9 @@
             "type": "chrome",
             "request": "launch",
             "url": "https://outlook.office.com/host/${{local:M365_APP_ID}}?${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -116,6 +128,9 @@
             "type": "msedge",
             "request": "launch",
             "url": "https://www.office.com/m365apps/${{local:M365_APP_ID}}?auth=2&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -127,6 +142,9 @@
             "type": "chrome",
             "request": "launch",
             "url": "https://www.office.com/m365apps/${{local:M365_APP_ID}}?auth=2&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
