--- a/developer-assist-dashboard/api/package.json
+++ b/developer-assist-dashboard/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
-    "dev": "func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
+    "dev": "nodemon --exec func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
     "build": "tsc",
     "watch:teamsfx": "tsc -w",
     "prestart": "npm run build",
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@azure/functions": "^1.2.2",
+    "@azure/functions": "^4.2.0",
     "@microsoft/teamsfx": "^2.0.0",
     "@microsoft/teams-js": "^2.7.1",
     "@octokit/core": "^4.2.0",
@@ -21,6 +21,8 @@
     "@types/node": "^18.16.1",
     "@types/node-fetch": "^2.6.3",
     "env-cmd": "^10.1.0",
+    "nodemon": "^3.1.0",
     "typescript": "^4.4.4"
-  }
+  },
+  "main": "dist/src/functions/*.js"
 }
