--- a/developer-assist-dashboard/teamsapp.local.yml
+++ b/developer-assist-dashboard/teamsapp.local.yml
@@ -86,15 +86,13 @@ deploy:
       devCert:
         trust: true
       func:
-        version: ~4.0.5174
+        version: ~4.0.5455
         symlinkDir: ./devTools/func
-      dotnet: true
     # Write the information of installed development tool(s) into environment
     # file for the specified environment variable(s).
     writeToEnvironmentFile:
       sslCertFile: SSL_CRT_FILE
       sslKeyFile: SSL_KEY_FILE
-      dotnetPath: DOTNET_PATH
       funcPath: FUNC_PATH
 
   # Run npm command
@@ -108,13 +106,6 @@ deploy:
       args: install --no-audit
       workingDirectory: api
   
-  # TeamsFx Azure Functions project depends on extra Azure Functions binding extensions for HTTP trigger authorization.
-  - uses: cli/runDotnetCommand
-    with:
-      args: build extensions.csproj -o ./bin --ignore-failed-sources
-      workingDirectory: api
-      execPath: ${{DOTNET_PATH}}
-
   # Generate runtime environment variables
   - uses: file/createOrUpdateEnvironmentFile
     with:
@@ -130,12 +121,12 @@ deploy:
         REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
         REACT_APP_FUNC_NAME: ${{FUNC_NAME}}
         REACT_APP_FUNC_ENDPOINT: ${{FUNC_ENDPOINT}}
-        DEVOPS_ORGANIZATION_NAME: ${{DEVOPS_ORGANIZATION_NAME}}
-        DEVOPS_PROJECT_NAME: ${{DEVOPS_PROJECT_NAME}}
-        GITHUB_REPO_NAME: ${{GITHUB_REPO_NAME}}
-        GITHUB_REPO_OWNER: ${{GITHUB_REPO_OWNER}}
-        PlANNER_GROUP_ID: ${{PLANNER_GROUP_ID}}
-        PLANNER_PLAN_ID: ${{PLANNER_PLAN_ID}}
+        REACT_APP_DEVOPS_ORGANIZATION_NAME: ${{DEVOPS_ORGANIZATION_NAME}}
+        REACT_APP_DEVOPS_PROJECT_NAME: ${{DEVOPS_PROJECT_NAME}}
+        REACT_APP_GITHUB_REPO_NAME: ${{GITHUB_REPO_NAME}}
+        REACT_APP_GITHUB_REPO_OWNER: ${{GITHUB_REPO_OWNER}}
+        REACT_APP_PLANNER_GROUP_ID: ${{PLANNER_GROUP_ID}}
+        REACT_APP_PLANNER_PLAN_ID: ${{PLANNER_PLAN_ID}}
   
   # Generate runtime environment variables for backend
   - uses: file/createOrUpdateEnvironmentFile
@@ -153,7 +144,7 @@ deploy:
         GITHUB_ACCESS_TOKEN: ${{SECRET_GITHUB_ACCESS_TOKEN}}
         GITHUB_REPO_NAME: ${{GITHUB_REPO_NAME}}
         GITHUB_REPO_OWNER: ${{GITHUB_REPO_OWNER}}
-        PlANNER_GROUP_ID: ${{PLANNER_GROUP_ID}}
+        PLANNER_GROUP_ID: ${{PLANNER_GROUP_ID}}
         PLANNER_PLAN_ID: ${{PLANNER_PLAN_ID}}
         PLANNER_BUCKET_ID: ${{PLANNER_BUCKET_ID}}
         ALLOWED_APP_IDS: 1fec8e78-bce4-4aaf-ab1b-5451cc387264;5e3ce6c0-2b1f-4285-8d4b-75ee78787346;0ec893e0-5785-4de6-99da-4ed124e5296c;4345a7b9-9a63-4910-a426-35363201d503;4765445b-32c6-49b0-83e6-1d93765276ca;d3590ed6-52b3-4102-aeff-aad2292ab01c;00000002-0000-0ff1-ce00-000000000000;bc59ab01-8403-45c6-8796-ac3ef710b3e3
